# Group_project

./: .env-ex  .env.example
.github/workflows/: ci.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/django_app/apps/contests/: admin.py  models.py  serializers.py  services.py  tasks.py  test_contests_api.py  test_scoring.py  test_tasks.py  urls.py  views.py
backend/django_app/apps/contests/migrations/: 0001_initial.py
backend/django_app/apps/problems/: admin.py  test_problems_api.py
backend/django_app/apps/problems/migrations/: 0001_initial.py
backend/django_app/apps/realtime/: test_contest_consumer.py
backend/django_app/apps/submissions/: serializers.py  signals.py  test_signals.py  test_submissions_api.py
backend/django_app/apps/submissions/migrations/: 0002_rename_memory_used_submission_memory_used_mb.py
backend/django_app/apps/users/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/django_app/config/: celery.py  urls.py
backend/django_app/config/settings/: storages.py
backend/django_app/settings/: base.py  dev.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx
judge/: Dockerfile  pyproject.toml
judge/app/core/: runner.py  sandbox.py
